# proyecto-corporativo

./: Cargo.toml
.sqlx/: query-1eba07416a95f58ce48cda8ca75d5485c9db4b689de94655ef4294d0aa493876.json  query-4b4bc9f1719446d3fd04be8f75e7d34a1390235b0d11b5c637ef2a3e34ee2213.json  query-705c5202eedd9a418554a947af46179dc256a1f71a988de16aa696e444f9bf57.json  query-94851bc1c84a6df3c4aee5821ba5a2192076ac8c1f74872ebdffe04928f840c3.json  query-96584f6a649b3c95aa41475644888a1310f64e5765a94f7247d343c04ec6504b.json  query-9bf1ec294c229564b762fe279a2757c6bc986c10352a2ad9fc81c908e6c281f4.json  query-a0bd867ca0a5459fc220260b8e19107fa8283e96ab4768fc59b1c434f73f9742.json  query-a2401afe51487849f20ef9ecb914252b5a690dac5ee357e89142044e2743f807.json  query-b9b2ebf591618e3aca67cfbe891de15e6868aa8220a32d1c962a78a1c0e0c931.json  query-c7ded39ea472fdd5ab433fb38c39e6118fa011ca249b426fb454e498b7ff42e5.json  query-d80df9967a8b22a3347273bb1ab28f08b89e380f49319edec3f0e06a82fa186a.json  query-fb07fdff3989c58e279442e5b415a3baca0886545a917b97b278b4645c02ef4e.json
src/: db.rs  main.rs  routes.rs
src/handlers/: auth.rs  mod.rs  modulos.rs  perfiles.rs  permisos_perfil.rs  usuarios.rs
src/middleware/: jwt.rs
src/models/: mod.rs  modulo.rs  perfil.rs  permisos_perfil.rs  usuario.rs
static/: dashboard.html  error.html  index.html  login.html  modulos.html  nuevo_perfil.html  perfiles.html  permisosperfil.html  principal1.1.html  principal1.2.html  principal2.1.html  principal2.2.html  usuarios.html
static/css/: styles.css
static/js/: auth.js  crud_permisos.js  index.js  login.js  modulos.js  (+9 more)
