[package]
name = "proyecto_corporativo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
jsonwebtoken = "9"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
bcrypt = "0.15"
reqwest = { version = "0.11", features = ["json"] }